syntax = "proto3";

option csharp_namespace = "DBGrpcApi";

package GrpcService;

// The greeting service definition.
service Security {
  // Sends a greeting
  rpc Login (LoginRequest) returns (LoginReply);
  rpc Heart (HeartRequest) returns (HeartReply);
  rpc Logout (LogoutRequest) returns (LogoutReply);
}



// The request message containing the user's name.
message LoginRequest {
  string name = 1;
  string password=2;
  string ApplicationCode=3;
}

// The response message containing the greetings.
message LoginReply {
  string Token = 1;
  int64  Time=2;
  int32 Timeout=3;
}

message HeartRequest {
  string Token = 1;
  int64 Time=2;
}


message LogoutRequest {
  string Token = 1;
}


message HeartReply {
  bool Result = 1;
}


message LogoutReply {
  bool Result = 1;
}